--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": ">=7.2",
         "fzaninotto/faker": "^1.9",
         "laravel/framework": "^5.0",
-        "laravel/socialite": "^4.4"
+        "laravel/socialite": "3.2"
     },
     "require-dev": {
         "laravel/framework": "^5.0",
