--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,16 @@
         "laravel/socialite": "3.2"
     },
     "require-dev": {
-        "laravel/framework": "^5.0",
+        "laravel/framework": "~5.5.34",
+        "mockery/mockery": "~1.0",
+        "orchestra/testbench": "3.5.6",
         "phpunit/phpunit": "~6.0"
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Jubilee\\Auth\\AuthProvider"
+                "Jubilee\\Auth\\AuthProvider",
+                "Jubilee\\Auth\\FacebookProvider"
             ]
         }
     },
